--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,15 @@
 :root{
-    --white: #FFFFEB;
+    --white: #FFFFFB;
+    --dark-grey: #2c2c2c;
     --red: #E74545;
     --nav-width: 200px;
 }
 
 html{
-    /*height: 100%;
-    width: 100%;*/
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body{
-    /*height: 100%;*/
-    /*width: 100%;*/
     background-color: var(--white);
 }
 
@@ -24,7 +22,6 @@ body{
     width: 100%;
 
     font-size: xx-large;
-    font-family: cursive;
     color: var(--white);
 
     background-color: var(--red);
@@ -35,6 +32,16 @@ body{
     display: flex;
     height: 100%;
     min-height: 100%;
+}
+
+.footer{
+    display: block;
+    margin: 0px;
+    padding: 5px;
+    width: 95%;
+    height: 250px;
+    text-align: right;
+    transform: translate(0%, 50%);
 }
 
 /*Navigation Bar*/
@@ -74,8 +81,10 @@ body{
 /*Page Content*/
 .content{
     vertical-align: top;
-    margin: 0;
+    margin: auto;
     padding: 10px;
+    max-width: 600px;
+    text-align: justify;
 }
 
 .content h1,h2,h3{
@@ -93,7 +102,7 @@ body{
 }
 
 .link-image{
-    width: 25px;
+    width: 50px;
     position: relative;
     top: 5px;
 }
@@ -115,5 +124,34 @@ body{
 }
 
 .decklist-redirection-link{
+    color: var(--red);
+}
+
+.card-image-span{
+    display: none;
+}
+
+.card-name{
+    color: var(--red);
+    z-index: 99;
+}
+
+.card-name a{
+    color: var(--red);
+    text-decoration: none;
+    z-index: 99;
+}
+
+.card-name:hover ~ .card-image-span{
+    display: block;
+    position: absolute;
+    z-index: 2;
+}
+
+.card-image{
+    width: 250px;
+}
+
+.ins-outs{
     color: var(--red);
 }
